[package]
name = "jetracer-controller"
version = "0.1.0"
authors = ["Nicolas Vivet <nicolas@nzx.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2"
linux-embedded-hal = "0.3"
pwm-pca9685 = "0.2"
actix = "0.9"
actix-web = "2.0"
actix-web-actors = "2.0"
gstreamer = "0.15"
log = "0.4.0"
env_logger = "0.7.1"

[dev-dependencies]
embedded-hal-mock = "0.7"